--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
     background-image: linear-gradient(#ff0, #dace00, #ff0);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent; /*需要文字透明*/
-    animation: jd var(--duration) both linear;
+    animation: jd var(--duration) forwards linear;
   }
 
   @keyframes jd {
     0% {
-      width: 0px;
+      width: 0%;
     }
     100% {
-      width: 36px;
+      width: 100%;
     }
   }
 
